--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
   <groupId>Lab2Maven</groupId>
   <artifactId>Lab2Maven</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
   <name>Lab2Maven</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/ErvinCs/VVSS</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
